--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title>NeoBank</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <a href="#" class="header__logo">NeoBank</a>
+        <nav>
+            <ul class="header__nav">
+                <li><a class="header__nav-link" href="#">Credit card</a></li>
+                <li><a class="header__nav-link" href="#">Product</a></li>
+                <li><a class="header__nav-link" href="#">Account</a></li>
+                <li><a class="header__nav-link" href="#">Resources</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="header__button">Online Bank</a>
+    </header>
+    <main>
+        <section class="choose">
+            <div class="choose__info">
+                <h1 class="choose__title">Choose the design you like and apply for card right now</h1>
+                <button class="choose-button">Choose the card</button>
+            </div>
+            <div class="choose__cards">
+                <img src="./assets/img/cardImage1.png" alt="card-img">
+                <img src="./assets/img/cardImage2.png" alt="card-img">
+                <img src="./assets/img/cardImage3.png" alt="card-img">
+                <img src="./assets/img/cardImage4.png" alt="card-img">
+            </div>
+        </section>
+        <section class="features">
+            <img class="features__img" src="./assets/img/human.png" alt="human">
+            <div class="features__info">
+                <h2 class="features__title">We Provide Many Features You Can Use</h2>
+                <p class="features__text">You can explore the features that we provide with fun and have their own
+                    functions each feature</p>
+                <ul class="features__list">
+                    <li class="features__list-item">Powerfull online protection.</li>
+                    <li class="features__list-item">Cashback without borders.</li>
+                    <li class="features__list-item">Personal design</li>
+                    <li class="features__list-item">Work anywhere in the world</li>
+                </ul>
+            </div>
+        </section>
+        <section class="exchange">
+            <div class="exchange__currency">
+                <h2 class="exchange__title">Exchange rate in internet bank</h2>
+                <h3 class="exchange__text">Currency</h3>
+                <div class="exchange__cur">
+                    <p class="exchange__cur-value">USD:
+                        <span class="exchange__cur-price">60.78</span>
+                    </p>
+                    <p class="exchange__cur-value">CNY:
+                        <span class="exchange__cur-price">9.08</span>
+                    </p>
+                    <p class="exchange__cur-value">CHF:
+                        <span class="exchange__cur-price">64.78</span>
+                    </p>
+                    <p class="exchange__cur-value">USD:
+                        <span class="exchange__cur-price">60.78</span>
+                    </p>
+                    <p class="exchange__cur-value">JPY:
+                        <span class="exchange__cur-price">0.46</span>
+                    </p>
+                    <p class="exchange__cur-value">TRY:
+                        <span class="exchange__cur-price">3.39</span>
+                    </p>
+                </div>
+                <a class="exchange__link" href="#">All courses</a>
+            </div>
+            <div class="exchange__update">
+                <h3 class="exchange__update-text">Update every 15 minutes, MSC 09.08.2022</h3>
+                <img class="exchange__update-img" src="./assets/img/bank.png" alt="bank-img">
+            </div>
+        </section>
+        <section class="world">
+            <h2 class="world__title">You can use our services anywhere in the world</h2>
+            <p class="world__text">Withdraw and transfer money online through our application</p>
+            <img class="world__img" src="./assets/img/map.png" alt="world map">
+        </section>
+        <section class="support">
+            <p class="support__text-color">Support</p>
+            <h2 class="support__title">Subscribe Newsletter & get</h2>
+            <p class="support__text">Bank News</p>
+            <form class="support__form">
+                <img class="support__form-img" src="./assets/img/email.png" alt="email-sign">
+                <input class="support__form-input" type="text" placeholder="Your email">
+                <button class="support__form-button">
+                    <img class="support__form-sign" src="./assets/img/tg-sign.png" alt="tg-sign">
+                    Subscribe</button>
+            </form>
+        </section>
+    </main>
 </body>
+
 </html>
