--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 <body>
     <header class="header">
         <a href="#" class="header__logo">NeoBank</a>
-        <nav>
-            <ul class="header__nav">
+        <input id="header__toggle" type="checkbox" />
+        <label class="header__hamb" for="header__toggle">
+            <span class="header__hamb-bar"></span>
+            <span class="header__hamb-bar"></span>
+            <span class="header__hamb-bar"></span>
+            <span class="header__hamb-bar"></span>
+        </label>
+        <nav class="header__nav">
+            <ul class="header__nav-list">
                 <li><a class="header__nav-link" href="#">Credit card</a></li>
                 <li><a class="header__nav-link" href="#">Product</a></li>
                 <li><a class="header__nav-link" href="#">Account</a></li>
@@ -20,12 +27,6 @@
             </ul>
         </nav>
         <a href="#" class="header__button">Online Bank</a>
-        <div class="header__hamb">
-            <span class="header__hamb-bar"></span>
-            <span class="header__hamb-bar"></span>
-            <span class="header__hamb-bar"></span>
-            <span class="header__hamb-bar"></span>
-        </div>
     </header>
     <main>
         <section class="choose">
