feat: add Header

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div id="news"></div>
     <div id="support"></div>
     <div id="footer"></div>
-    <script src="../src/index.js" type="module"></script>
+    <script src="../src/script.js" type="module"></script>
 </body>
 
 </html>
