--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="NeoBank App"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Rubik:wght@400;500&family=Ubuntu:wght@500;700&display=swap"
+        rel="stylesheet">
     <title>NeoBank</title>
   </head>
   <body>
